[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameUI/Sprites/hotbar2.png" type="Texture" id=1]
[ext_resource path="res://GameUI/Sprites/hotbar.png" type="Texture" id=2]
[ext_resource path="res://GameUI/Sprites/hotbar3.png" type="Texture" id=3]
[ext_resource path="res://GameUI/Sprites/pick.png" type="Texture" id=4]
[ext_resource path="res://GameUI/BehaviourButton.gd" type="Script" id=5]
[ext_resource path="res://Fonts/pixel.tres" type="DynamicFont" id=6]

[node name="BehaviourButton" type="TextureButton"]
margin_left = 152.0
margin_right = 168.0
margin_bottom = 18.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BahaviourImage" type="TextureRect" parent="."]
anchor_left = 0.187
anchor_top = 0.167
anchor_right = 0.875
anchor_bottom = 0.778
margin_left = 0.0867505
margin_top = -0.00600028
margin_right = 0.0787497
margin_bottom = -0.00400066
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLabel" type="Label" parent="."]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.968627, 0.760784, 0.141176, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_BehaviourButton_pressed"]
